Calculate Tariff Test